deploy/registry/manifests/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docker-registry
  name: docker-registry
  namespace: docker-registry-system
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: docker-registry # nosemgrep
          image: registry:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: web
              protocol: TCP
          resources:
            requests:
              memory: "2048Mi"
              cpu: "1000m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/docker/registry
              name: docker-registry-config
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - docker-registry
                namespaces:
                  - default
                topologyKey: kubernetes.io/hostname
              weight: 100
      volumes:
        - name: docker-registry-config
          configMap:
            name: docker-registry-config
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-service
  namespace: docker-registry-system
spec:
  ports:
    - name: port-name
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: docker-registry
  sessionAffinity: ClientIP
