deploy/registry/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: docker-registry-system
  labels:
    app: hub-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: 4096m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
    - host: hub.sealos.cn
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: docker-registry-service
                port:
                  number: 5000
  tls:
    - hosts:
        - hub.sealos.cn
      secretName: hub-sealos-cn-cert
